# enterprise_mcp_mvp_demo_ui

./: .env.dev.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
enterprise_mcp_mvp_demo_ui/: main.py  utils.py
enterprise_mcp_mvp_demo_ui/components/: admin.py  chat.py
