[tool.poetry]
name = "enterprise-mcp-mvp-demo-ui"
version = "0.1.0"
description = ""
authors = ["fisseha-estifanos <fisseha.137@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.41.1"
watchdog = "^6.0.0"
python-dotenv = "^1.0.1"
black = "^24.10.0"
flake8 = "^7.1.1"
pyright = "^1.1.391"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks]
flake8 = "flake8 --max-line-length=88"
pyright = "pyright"
lint = ["flake8", "pyright"]
format = "black ."
pre-commit = ["format", "lint"]


[tool.poe.tasks.start-dev]
shell = """
source .env.dev && streamlit run enterprise_mcp_mvp_demo_ui/main.py
"""